--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("User", "Index", "User")</li>
                 </ul>
+                <form class="navbar-form navbar-right" role="search" action="/User/Search" method="get">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search" name="searchQuery">
+                    </div>
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
             </div>
         </div>
     </div>
